<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ExtraTranslation">
    <string name="loading">正在加载</string>

    <string name="tip">提示</string>
    <string name="sure">确定</string>
    <string name="add">添加</string>
    <string name="back">返回</string>
    <string name="exit">退出</string>
    <string name="open">开启</string>
    <string name="save">保存</string>
    <string name="close">关闭</string>
    <string name="query">查询</string>
    <string name="cancel">取消</string>
    <string name="delete">删除</string>
    <string name="search">搜索</string>
    <string name="update">更新</string>
    <string name="install">安装</string>
    <string name="replace">更换</string>
    <string name="restart">重新启动</string>

    <string name="tip_exit_app">再按一次返回退出程序</string>
    <string name="tip_app_has_exception">程序发生异常</string>
    <string name="tip_url_cannot_null">URL不能为空</string>
    <string name="tip_no_more">没有更多了</string>

    <!--    pull to refresh-->
    <string name="pull_to_refresh_pull_label">下拉刷新…</string>
    <string name="pull_to_refresh_release_label">放开以刷新…</string>
    <string name="pull_to_refresh_refreshing_label">正在载入…</string>
    <string name="pull_to_refresh_from_bottom_pull_label">上拉加载…</string>
    <string name="pull_to_refresh_from_bottom_release_label">放开以加载…</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">正在载入…</string>

    <!--更新APP弹框-->
    <string name="app_update_fmt_title_update">版本号：%1$s</string>
    <string name="app_update_error_download">下载失败,请稍后重试</string>
    <string name="app_update_error_install">安装失败，本地文件不完整，请重新下载</string>
    <string name="app_update_fmt_progress">%1$d%%</string>

    <string name="app_dot_keep_activities_value">由于您已开启\"不保留活动\"，导致%1$s部分功能无法正常使用。我们建议您点击右下方\"去设置\"按钮，在\"开发者选项\"中关闭\"不保留活动\"功能。</string>
</resources>