<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:orientation="vertical"
    tools:background="@color/color_black">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="40dp"
        android:background="@drawable/shape_corner_radius_7dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/app_update_fmt_title_update"
            android:textColor="@color/color_333"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_content"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:scrollbars="vertical"
            android:paddingHorizontal="20dp"
            android:layout_marginTop="18dp"
            android:lineSpacingMultiplier="1.2"
            tools:text="1、tip1\n2、tip2\n3、tip3"
            android:textColor="@color/color_666"
            android:textSize="15sp" />

        <ProgressBar
            android:id="@+id/number_progress_bar"
            style="@style/AppUpdateHorizontalProgressBar"
            android:layout_marginTop="10dp"
            android:visibility="gone" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_cancel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/selector_app_update_btn"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/color_333"
                android:textSize="17sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_ok"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/selector_app_update_btn"
                android:gravity="center"
                android:text="@string/update"
                android:textColor="@color/colorAccent"
                android:textSize="17sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>