<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    tools:background="@color/color_black">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="45dp"
        android:layout_marginVertical="40dp"
        android:background="@drawable/shape_corner_radius_13dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:text="@string/tip"
            android:textColor="@color/color_333"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="26dp"
            android:maxLength="16"
            android:singleLine="true"
            android:textColor="@color/color_333"
            android:textColorHint="@color/color_999"
            android:textSize="13sp"
            tools:hint="请输入请输入请输入请输入请输入请输入请输入请输入请输入请输入" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="14dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingHorizontal="18dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_cancel"
                android:layout_width="107dp"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_circle"
                android:backgroundTint="@color/color_F0F0F0"
                android:gravity="center"
                android:paddingVertical="8dp"
                android:text="@string/cancel"
                android:textColor="@color/color_333"
                android:textSize="13sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_ok"
                android:layout_width="107dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:background="@drawable/shape_circle"
                android:gravity="center"
                android:paddingVertical="8dp"
                android:text="@string/sure"
                android:textColor="@color/color_white"
                android:textSize="13sp"
                app:qmui_skin_bg_tint_color="?attr/app_skin_color_base"
                tools:backgroundTint="@color/color_cold" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>