<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    tools:background="@color/color_black">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="45dp"
        android:layout_marginVertical="40dp"
        android:background="@drawable/shape_corner_radius_13dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:text="@string/tip"
            android:textColor="@color/color_333"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_content"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="26dp"
            android:layout_weight="1"
            android:lineSpacingMultiplier="1.2"
            android:paddingHorizontal="20dp"
            android:scrollbars="vertical"
            android:textColor="@color/color_333"
            android:textSize="13sp"
            tools:text="1、tip1\n2、tip2\n3、tip3" />

        <ProgressBar
            android:id="@+id/number_progress_bar"
            style="@style/AppUpdateHorizontalProgressBar"
            android:layout_marginTop="10dp"
            android:visibility="invisible" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="14dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingHorizontal="18dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_cancel"
                android:layout_width="107dp"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_circle"
                android:backgroundTint="@color/color_ccc"
                android:gravity="center"
                android:paddingVertical="8dp"
                android:text="@string/cancel"
                android:textColor="@color/color_333"
                android:textSize="13sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_ok"
                android:layout_width="107dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:background="@drawable/shape_circle"
                android:gravity="center"
                android:paddingVertical="8dp"
                android:text="@string/sure"
                android:textColor="@color/color_white"
                android:textSize="13sp"
                android:backgroundTint="@color/colorTheme" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>